# sbaitso

./: Cargo.toml  README.md  build.rs
src/ui/: main_window.slint
