[package]
name = "sbaitso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.2.2"
tokio = { version = "1.33.0", features = ["full"] }
tts = "0.25.6"

[build-dependencies]
slint-build = "1.2.2"
